# GameScrcpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_EN.md  analyze_separators.py
ci/win/: build_all.bat  publish_for_win.bat
client/: CMakeLists.txt
client/env/: scrcpy-server
client/env/ffmpeg/include/libavutil/: ffversion.h
client/env/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
client/env/opencv_matching/matcher/: matcher.cpp
client/env/opencv_matching/matcher/Pattern_Matching/: PatternMatching.cpp
client/keymap/: default.json
client/src/app/: config.cpp  config.h  main.cpp  path.h  winutils.cpp  winutils.h
client/src/app/mousetap/: mousetap.cpp  mousetap.h  winmousetap.cpp  winmousetap.h
client/src/common/: ConfigCenter.cpp  ConfigCenter.h  Constants.h  ErrorCode.h  GameScrcpyCore.h  GameScrcpyCoreDef.h  Logger.h  PerformanceMonitor.cpp  PerformanceMonitor.h  QtScrcpyCore.h  QtScrcpyCoreDef.h  SPSCQueue.h  compat.h  imagematcher.cpp  imagematcher.h  qscrcpyevent.h
client/src/control/: bufferutil.cpp  bufferutil.h  controller.cpp  controller.h  controlsender.cpp  controlsender.h
client/src/control/handlers/: CursorHandler.cpp  CursorHandler.h  FreeLookHandler.cpp  FreeLookHandler.h  HandlerChain.cpp  HandlerChain.h  IInputHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  SteerWheelHandler.cpp  SteerWheelHandler.h  ViewportHandler.cpp  ViewportHandler.h
client/src/control/input/: controlmsg.cpp  controlmsg.h  controlmsgpool.h  fastmsg.cpp  fastmsg.h  inputconvertbase.cpp  inputconvertbase.h  inputconvertgame.cpp  inputconvertgame.h  keymap.cpp  keymap.h  scriptapi.cpp  scriptapi.h
client/src/control/receiver/: devicemsg.cpp  devicemsg.h  receiver.cpp  receiver.h
client/src/control/script/: ScriptEngine.cpp  ScriptEngine.h  ScriptSandbox.cpp  ScriptSandbox.h  ScriptWatchdog.cpp  ScriptWatchdog.h
client/src/control/session/: InputDispatcher.cpp  InputDispatcher.h  ScriptBridge.cpp  ScriptBridge.h  SessionContext.cpp  SessionContext.h  SessionVars.cpp  SessionVars.h
client/src/core/impl/: FFmpegDecoderImpl.cpp  FFmpegDecoderImpl.h  GameInputProcessor.cpp  GameInputProcessor.h  KcpControlChannel.cpp  KcpControlChannel.h  KcpVideoChannel.cpp  KcpVideoChannel.h  OpenGLRenderer.cpp  OpenGLRenderer.h  TcpControlChannel.cpp  TcpControlChannel.h  TcpVideoChannel.cpp  TcpVideoChannel.h  ZeroCopyDecoder.cpp  ZeroCopyDecoder.h  ZeroCopyRenderer.cpp  ZeroCopyRenderer.h
client/src/core/infra/: FrameData.h  FramePool.cpp  FramePool.h  FrameQueue.h  SessionParams.h
client/src/core/interfaces/: IControlChannel.h  IDecoder.h  IInputProcessor.h  IRenderer.h  IVideoChannel.h
client/src/core/service/: ConnectionManager.cpp  ConnectionManager.h  DeviceSession.cpp  DeviceSession.h  InputManager.cpp  InputManager.h  ScriptEngine.cpp  ScriptEngine.h  SessionFactory.cpp  SessionFactory.h  StreamManager.cpp  StreamManager.h  ZeroCopyStreamManager.cpp  ZeroCopyStreamManager.h
client/src/decoder/: IDecoder.h  avframeconvert.cpp  avframeconvert.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  fpscounter.cpp  fpscounter.h  videobuffer.cpp  videobuffer.h
client/src/render/: D3D11GLInterop.cpp  D3D11GLInterop.h  IVideoRenderer.h  qyuvopenglwidget.cpp  qyuvopenglwidget.h
client/src/transport/adb/: IAdbExecutor.h  adbprocess.h  adbprocessimpl.cpp  adbprocessimpl.h
client/src/transport/kcp/: FecCodec.h  KcpClient.cpp  KcpClient.h  KcpCore.cpp  KcpCore.h  KcpTransport.cpp  KcpTransport.h  UdpVideoClient.cpp  UdpVideoClient.h  ikcp.c  kcpcontrolsocket.cpp  kcpcontrolsocket.h  kcpserver.cpp  kcpserver.h  kcpvideosocket.cpp  kcpvideosocket.h
client/src/transport/server/: device.cpp  device.h  devicemanage.cpp  devicemanage.h  server.cpp  server.h
client/src/transport/tcp/: tcpserver.h  tcpserverhandler.cpp  tcpserverhandler.h  videosocket.cpp  videosocket.h
client/src/ui/: ConnectionProgressWidget.cpp  ConnectionProgressWidget.h  KeyMapBase.h  KeyMapEditView.cpp  KeyMapEditView.h  KeyMapItems.h  KeyMapOverlay.cpp  KeyMapOverlay.h  PerformanceDialog.cpp  PerformanceDialog.h  ScriptTipWidget.cpp  ScriptTipWidget.h  dialog.cpp  dialog.h  dialog.ui  imagecapturedialog.h  scriptbuttonmanager.h  scripteditordialog.h  scriptswipemanager.h  selectioneditordialog.h  selectionregionmanager.h  settingsdialog.cpp  settingsdialog.h  terminaldialog.cpp  terminaldialog.h  toolform.cpp  toolform.h  toolform.ui  videoform.cpp  videoform.h  videoform.ui
client/src/ui/resources/: GameScrcpy.rc  QtScrcpy.rc  res.qrc
client/src/ui/resources/i18n/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
client/src/ui/resources/qss/: light.qss  modern_dark.qss
client/src/ui/resources/style/: modern_dark.qss
client/src/ui/widgets/: iconhelper.h  keepratiowidget.cpp  keepratiowidget.h  magneticwidget.cpp  magneticwidget.h
config/: config.ini
docs/: BUILD.md  BUILD_EN.md  SCRIPT_API.md  SCRIPT_API_EN.md
server/: README.md  build_without_gradle.bat
server/src/main/java/com/genymobile/scrcpy/: Options.java  Server.java  Workarounds.java
server/src/main/java/com/genymobile/scrcpy/control/: ControlChannel.java  ControlMessage.java  ControlMessageReader.java  Controller.java  DeviceMessageSender.java  FastTouch.java  IControlChannel.java  PointersState.java  PositionMapper.java
server/src/main/java/com/genymobile/scrcpy/device/: DesktopConnection.java  Device.java  DeviceApp.java  IStreamer.java  Streamer.java
server/src/main/java/com/genymobile/scrcpy/kcp/: FecCodec.java  KcpConfig.java  KcpControlChannel.java  KcpCore.java  KcpTransport.java  KcpVideoSender.java  README.md  UdpVideoSender.java
server/src/main/java/com/genymobile/scrcpy/opengl/: OpenGLRunner.java
server/src/main/java/com/genymobile/scrcpy/session/: KcpSession.java  ScrcpySession.java  TcpSession.java
server/src/main/java/com/genymobile/scrcpy/util/: LogUtils.java
server/src/main/java/com/genymobile/scrcpy/video/: BitrateControl.java  DisplaySizeMonitor.java  ScreenCapture.java  SurfaceEncoder.java  VideoCodec.java  VideoSource.java
(+2 files in other folders)
